# nwc-pattern-mining

./: README.md  setup.cfg
docs/: description.md  run_commands.md
module/: __init__.py  pattern_mining_client.py  patternminer.py  utilities.py
module/mining/: candidatepattern.py  latticegraph.py  latticenode.py  stategraph.py
module/patterncount/: __init__.py  count_strategy.py  stategraph.py
module/pruning/: pruning_strategy.py  support_pruning.py
src/nwc_pattern_miner/: __init__.py
src/nwc_pattern_miner/docs/: run_commands.md
src/nwc_pattern_miner/module/: pattern_mining_client.py  patternminer.py
src/nwc_pattern_miner/module/mining/: __init__.py  candidatepattern.py  latticegraph.py  latticenode.py
src/nwc_pattern_miner/module/pruning/: __init__.py  pruning_strategy.py  support_pruning.py  ub_pruning.py
src/nwc_pattern_miner/tests/: test_pattern_mining_client.py
src/nwc_pattern_miner/tests/mining/: test_candidatepattern.py
src/nwc_pattern_miner/tests/pruning/: test_ub_pruning.py
tests/: test_pattern_mining_client.py  test_patternminer.py
tests/mining/: test_candidatepattern.py  test_latticegraph.py  test_stategraph.py
tests/patterncount/: test_stategraph.py
tests/pruning/: test_support_pruning.py
