[metadata]

name = nwc_pattern_miner
version = 0.2
author = Anirudh Agarwal
author_email = agarw228@umn.edu
description = Mines sequence patterns co-occuring with non-compliant windows in a target feature.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SpatialUMN/nwc-pattern-mining
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pandas==1.2.4
    tqdm==4.60.0

[options.packages.find]
where = src